--- a/index.html
+++ b/index.html
@@ -250,17 +250,17 @@
   </div>
   <div class="pics ">
     <div class="md:flex xl:flex lg:flex gap-[1rem] ml-[1rem] mr-[1rem] mb-[1rem] md:width-[10rem]  ">
-      <img class="mb-[1rem] w-[80rem] md:w-[15.5rem] xl:w-[25rem] lg:w-[25rem] " src="images/gallery 1.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
-     <img  class="mb-[1rem]  w-[80rem] md:w-[15.5rem] xl:w-[25rem] lg:w-[25rem]" src="images/gall 2.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
-     <img  class="mb-[1rem]  w-[80rem] md:w-[15.5rem] xl:w-[25rem] lg:w-[25rem] " src="images/gall 3.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
+      <img class="mb-[1rem] w-[80rem] md:w-[14rem] xl:w-[25rem] lg:w-[25rem] " src="images/gallery 1.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
+     <img  class="mb-[1rem]  w-[80rem] md:w-[14rem] xl:w-[25rem] lg:w-[25rem]" src="images/gall 2.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
+     <img  class="mb-[1rem]  w-[80rem] md:w-[14rem] xl:w-[25rem] lg:w-[25rem] " src="images/gall 3.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
     </div>
     <div class=".gallvid md:flex  xl:flex lg:flex gap-[1rem] ml-[1rem] mr-[1rem] mb-[1rem] ">
-      <img  class="mb-[1rem]  w-[80rem] md:w-[15.5rem] xl:w-[25rem] lg:w-[25rem] " src="images/male 4.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
-      <img  class="mb-[1rem]  w-[80rem] md:w-[15.5rem] xl:w-[25rem] lg:w-[25rem] " src="images/fashion img 3.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
-      <img  class="mb-[1rem]  w-[80rem] md:w-[15.5rem] xl:w-[25rem] lg:w-[25rem] " src="images/male 2.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
+      <img  class="mb-[1rem]  w-[80rem] md:w-[14rem] xl:w-[25rem] lg:w-[25rem] " src="images/male 4.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
+      <img  class="mb-[1rem]  w-[80rem] md:w-[14rem] xl:w-[25rem] lg:w-[25rem] " src="images/fashion img 3.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
+      <img  class="mb-[1rem]  w-[80rem] md:w-[14rem] xl:w-[25rem] lg:w-[25rem] " src="images/male 2.jpg" alt="" height="400rem" width="400rem" style="border-radius: 0.5rem;">
     
     </div>
-  <div class="view rounded mt-[1rem] ml-[11rem] md:ml-[20rem] xl:ml-[33rem]  lg:ml-[33rem]   mb-[2rem]">
+  <div class="view rounded mt-[1rem] ml-[11rem] md:ml-[20rem] xl:ml-[33rem]  lg:ml-[33rem]">
     <button class="  w-[10rem] h-[2.5rem] justify-center xl:justify-center lg:justify-center  rounded">VIEW THE GALLERY</button>
   </div>
 </section>
@@ -270,14 +270,14 @@
      <h1 class="text-[3rem] ">Our testimonial</h1>
      <p class="text-[1.5rem]">What graduates say about us?</p>
     </div>
-    <div class="testimonials-content p-3 flex gap-[2.5rem]">
-      <div class="single-testimonials relative min-w-[250px] h-[28rem]">
-         <p class="relative">I joined HOB fashion school in 2019 with zero knowledge about fashion but wanted to become a fashion designer cos of my love for it right from little, and 
+    <div class="testimonials-content p-3 xl:flex lg:flex md:grid md:grid-cols-2 md:gap-4 sm:grid sm:grid-cols-2 sm:gap-2 xl:gap-[2.5rem] mb-4 lg:gap-[2.5rem]">
+      <div class="single-testimonials relative xl:min-w-[270px] lg:min-w-[270px] sm:min-w-[300px] md:min-w-[100px] md:h-[20rem] mb-4 ">
+         <p class="relative md:text-[8px] sm:text-[15px]">I joined HOB fashion school in 2019 with zero knowledge about fashion but wanted to become a fashion designer cos of my love for it right from little, and 
            graduated in 2021 from the three year program of bachalor fashion design and I own a rigidly growing fashion store....all thanks to HOB fashion school.</p>
          <div class="client-info gap-[3rem] ">
            <div class="client-pic">
              <a href="#">
-               <img src="images/face 4.jpg" alt="" width="150rem" height="20rem" style="margin-top: 3rem;">
+               <img class="md:w-40 md:mt-[0rem]  xl:ml-[3px]  lg:ml-[3px]  md:ml-[37px]" src="images/face 4.jpg" alt="" width="150rem" height="20rem" >
             </a>
            </div>
           <div class="client-details">
@@ -285,13 +285,13 @@
           </div>
          </div>
       </div>
-      <div class="single-testimonials">
-         <p>I joined HOB fashion school in 2014 as a fashion designer that wanted to grow my brand, and 
+      <div class="single-testimonials  relative xl:min-w-[270px] lg:min-w-[270px] md:min-w-[350px] md:h-[20rem] md:w-14 mb-4 ">
+         <p class="relative md:text-[8px] sm:text-[12px]">I joined HOB fashion school in 2014 as a fashion designer that wanted to grow my brand, and 
            graduated in 2016 from the two year program of bachalor fashion marketing and Management and my brand owns a couple of branches all over Nigeria and making plans to expands into the international market ....I never regret attending HOB fashion school, it was worth every penny.</p>
         <div class="client-info">
           <div class="client-pic">
              <a href="#">
-              <img src="images/face 5.jpg" alt="" width="150rem" height="20rem">
+              <img class="md:w-40 md:mt-[0rem] md:ml-[37px]" src="images/face 5.jpg" alt="" width="150rem" height="20rem">
             </a>
            </div>
           <div class="client-details">
@@ -299,13 +299,14 @@
         </div>
        </div>
       </div>
-      <div class="single-testimonials">
-        <p> I joined HOB fashion school in 2018 because i have always been in love with africa fashion and wanted to know all about it, and 
+      
+      <div class="single-testimonials  relative  xl:min-w-[270px] lg:min-w-[270px] md:min-w-[350px] md:h-[20rem] mb-4">
+        <p class="relative md:text-[8px] sm:text-[12px]"> I joined HOB fashion school in 2018 because i have always been in love with africa fashion and wanted to know all about it, and 
          graduated in 2020 from the three year program of Postgraduate Degree Sustainable Fashion-Design Major have been able to use my knowledge to grow my family business which have been struggle to do better ....I will always recommend HOB fashion school to an individual with a dream related to fashion.</p>
         <div class="client-info">
            <div class="client-pic">
             <a href="#">
-               <img src="images/face 3.jpg" alt=""width="150rem" height="20rem">
+               <img  class="md:w-38 md:mt-[0rem] md:ml-[37px]" src="images/face 3.jpg" alt=""width="150rem" height="20rem">
              </a>
            </div>
           <div class="client-details">
@@ -313,13 +314,13 @@
           </div>
          </div>
        </div>
-       <div class="single-testimonials">
-         <p> I joined HOB fashion school when i was 18, because of my love for fashion and joined immediately after my secondary school because i had no interest in going to the university, and with the help of my parents I was able to follow my passion and after my five years of taking both the three years and 
+       <div class="single-testimonials relative  xl:min-w-[270px] lg:min-w-[270px] md:min-w-[350px] md:h-[20rem] mb-4">
+         <p  class="relative md:text-[8px] sm:text-[12px]"> I joined HOB fashion school when i was 18, because of my love for fashion and joined immediately after my secondary school because i had no interest in going to the university, and with the help of my parents I was able to follow my passion and after my five years of taking both the three years and 
            two years programs. I own my brand which is during very well all thanks to HOB fashion school.... </p>
          <div class="client-info">
            <div class="client-pic">
              <a href="#">
-               <img src="images/face 2.jpg" alt="" width="150rem" height="20rem">
+               <img class="md:w-38 md:h-35 md:mt-[0rem] md:ml-[37px]" src="images/face 2.jpg" alt="" width="150rem" height="20rem">
              </a>
           </div>
            <div class="client-details">
@@ -331,42 +332,42 @@
   </div>
  </section>
  <section class="bg-white">
-   <div class=" flex p-[15px] gap-[1.5rem] mb-[2rem]">
-     <img class="rounded h-80 md:w-[10.4rem] xl:w-[200rem] lg:w-[200rem] " src="images/footer gra.jpg" alt="" width="290rem" height="100rem">
-     <img  class="rounded h-80 md: w-[10.4rem]  xl:w-[200rem] lg:w-[200rem] " src="images/footer ic.jpg" alt="" width="290rem" height="100rem">
-     <img  class="rounded h-80 md:w-[10.4rem]  xl:w-[200rem] lg:w-[200rem] " src="images/footer pic.jpg" alt="" width="290rem" height="100rem">
-     <img  class="rounded h-80 md:w-[10.4rem]  xl:w-[200rem] lg:w-[200rem] " src="images/footer go.jpg" alt="" width="290rem" height="100rem">
+   <div class=" xl:flex lg:flex md:flex sm:grid sm:grid-cols-2  p-[15px] gap-[1.5rem] mb-[2rem]">
+     <img class="rounded h-80 md:w-[10.4rem] xl:w-[200rem] lg:w-[200rem] sm:w-[250rem] w-[250rem] mb-4  " src="images/footer gra.jpg" alt="" width="290rem" height="100rem">
+     <img  class="rounded h-80 md: w-[10.4rem]  xl:w-[200rem] lg:w-[200rem] sm:w-[250rem] w-[250rem] mb-4  " src="images/footer ic.jpg" alt="" width="290rem" height="100rem">
+     <img  class="rounded h-80 md:w-[10.4rem]  xl:w-[200rem] lg:w-[200rem] sm:w-[250rem] w-[250rem] mb-4  " src="images/footer pic.jpg" alt="" width="290rem" height="100rem">
+     <img  class="rounded h-80 md:w-[10.4rem]  xl:w-[200rem] lg:w-[200rem] sm:w-[250rem] w-[250rem] mb-4  " src="images/footer go.jpg" alt="" width="290rem" height="100rem">
    </div>
-   <h2 class=" get md:ml-[12rem] xl:ml-[22rem] lg:ml-[22rem] xl:text-2xl lg:text-2xl font-bold">
+   <h2 class=" get md:ml-[12rem] xl:ml-[22rem] lg:ml-[22rem] sm:ml-[10rem] ml-[4rem] xl:text-2xl lg:text-2xl font-bold">
      BE THE FRIST TO GET NOTIFIED ABOUT US
    </h2>
-   <div class="form flex w-[40%] xl:ml-[30rem] lg:ml-[30rem] md:ml-[17rem] mt-[2rem]">
+   <div class="form flex w-[40%] xl:ml-[30rem] lg:ml-[30rem] md:ml-[17rem] sm:ml-[15rem] ml-[10rem] mt-[2rem]">
      <input class=" us h-[3.125rem] text-[14px] w-100%  " type="text" placeholder="Your email address">
-     <button class="normal h-[3.2rem] text-[14px] 
+     <button class="normal h-[4.5rem] text-[14px] 
      rounded-r-lg mb-[3rem]"><img src="images/download (8).png" alt="" height="18rem" width="25rem"></button>
    </div>
    <div class="search xl:h-[12rem] lg:h-[12rem] md:h-[12rem] w-[100%]">
-     <div class="bro flex justify-center gap-[4rem] md:text-[0.7rem]">
+     <div class="bro flex justify-center md:gap-[4rem] sm:gap-[2rem] gap-[2.4rem] md:text-[0.7rem] sm:text-[0.7rem] text-[0.4rem]">
       <a href=""><p>SEARCH</p></a>
       <a href=""><p>BRONCHURE</p></a>
       <a href=""><p>REGISTRATION</p></a>
       <a href=""><p>ABOUT US</p></a>
       <a href=""><p>CONTACT US</p></a>
     </div>
-    <div class="logo1 flex xl:gap-[18rem] lg:gap-[18rem] md:gap-[5rem]  mt-[6rem]">
+    <div class="logo1 flex xl:gap-[18rem] lg:gap-[18rem] md:gap-[10rem] sm:gap-[1rem] gap-[4rem] xl:mt-[6rem] mt-[2rem] lg:mt-[6rem] md:mt-[6rem] ">
       <div class="logo flex ">
-        <img class="h-5" src="images/face footer.png" alt="" height="20rem" width="25rem">
-        <img class="h-5"  src="images/insta footer.png" alt=""  height="20rem" width="25rem">
-        <img class="h-5"  src="images/you foot.png" alt=""  height="20rem" width="25rem">
-        <img class="h-5"  src="images/p-in foot.png" alt=""  height="20rem" width="25rem">
+        <img class="xl:h-5 lg:h-5 md:h-5 sm:h-5 h-3 " src="images/face footer.png" alt="" height="20rem" width="25rem">
+        <img class="h-3 xl:h-5 lg:h-5 md:h-5 sm:h-5"  src="images/insta footer.png" alt=""  height="20rem" width="25rem">
+        <img class="h-3 xl:h-5 lg:h-5 md:h-5 sm:h-5"  src="images/you foot.png" alt=""  height="20rem" width="25rem">
+        <img class="h-3 xl:h-5 lg:h-5 md:h-5 sm:h-5"  src="images/p-in foot.png" alt=""  height="20rem" width="25rem">
       </div>
       <div class="bo">
-       <p class="whitespace-nowrap"> &copy; 2025, Houseofbo fashion school.</p>
+       <p class="whitespace-nowrap text-[10px] sm:text-[12px] md:text-[10px] xl:text-[10px] md:text-[10px] "> &copy; 2025, Houseofbo fashion school.</p>
       </div>
       <div class="pay flex">
-       <img class="h-5"  src="images/paypal logo.png" alt="" height="25rem" width="25rem">
-       <img class="h-5"  src="images/discover.png" alt="" height="25rem" width="25rem">
-       <img class="h-5"  src="images/visa logo.png" alt="" height="25rem" width="25rem">
+       <img class="xl:h-5 lg:h-5 md:h-5 sm:h-5 h-3"  src="images/paypal logo.png" alt="" height="25rem" width="25rem">
+       <img class="xl:h-5 lg:h-5 md:h-5 sm:h-5 h-3"  src="images/discover.png" alt="" height="25rem" width="25rem">
+       <img class="xl:h-5 lg:h-5 md:h-5 sm:h-5 h-3"  src="images/visa logo.png" alt="" height="25rem" width="25rem">
       </div>
    </div>
  </section>
